Remove copypasta from zmq/Dockerfile

--- a/zmq/Dockerfile
+++ b/zmq/Dockerfile
@@ -1,14 +1,3 @@
-FROM znc:slim
+FROM znc:latest
 
-# znc:slim removed them. Install them again.
-RUN set -x \
-    && apk add --no-cache \
-        build-base \
-        icu-dev \
-        libressl-dev \
-        perl \
-        python3 \
-	py3-zmq \
-	libzmq
-
-COPY 30-build-modules.sh /startup-sequence/
+RUN apk add --no-cache py3-zmq libzmq
